--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy to Replicate
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   deploy:
@@ -13,12 +13,14 @@ jobs:
 
       - name: Install Cog
         run: |
-          sudo curl -o /usr/local/bin/cog -L https://github.com/replicate/cog/releases/latest/download/cog_Linux_x86_64
+          sudo curl -L https://github.com/replicate/cog/releases/latest/download/cog_Linux_x86_64 -o /usr/local/bin/cog
           sudo chmod +x /usr/local/bin/cog
 
       - name: Login to Replicate
+        env:
+          TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
         run: |
-          cog login --token ${{ secrets.REPLICATE_API_TOKEN }}
+          echo "$TOKEN" | cog login --token-stdin
 
       - name: Deploy model
         run: |
